removed debian 11 refs

--- a/modules/administration/pages/snippets/install_scap_security_guide_package.adoc
+++ b/modules/administration/pages/snippets/install_scap_security_guide_package.adoc
@@ -25,7 +25,7 @@ For executing remediations you need to install the SCAP security guide package o
 | CentOS 7, CentOS 8, Fedora, Oracle Linux 7, Oracle Linux 8, RHEL7, RHEL8, RHEL9, Red Hat OpenStack Platform 10, Red Hat OpenStack Platform 13, Red Hat Virtualization 4, Scientific Linux
 
 | scap-security-guide-debian
-| Debian 11, Debian 12
+| Debian 12
 
 | scap-security-guide-ubuntu
 | Ubuntu 20.04, Ubuntu 22.04
