--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -98,7 +98,7 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
-| {debian} 12, 11 (*)
+| {debian} 12 (*)
 | {check}
 | {cross}
 | {cross}
@@ -222,7 +222,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {cross}
 
-| {debian} 12, 11 (*)
+| {debian} 12 (*)
 | {check}
 | {cross}
 | {cross}
