--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -124,35 +124,7 @@ image::root-password.png[]
 include::../register-proxy-suma.adoc[]
 
 
-
-== Create an Activation Key for the Proxy
-
-On the {productname} server, create an activation key for the Proxy.
-
-.Task: Create an Activation Key
-. Navigate to menu:Systems[Activation Keys], and click btn:[Create key].
-. Create an activation key for the proxy host with {sle-micro} {microversion} as the parent channel.
-  This key should include all recommended channels and the Proxy as an extension child channel.
-. Proceed to boostrapping the proxy host as a minion.
-
-
-
-== Bootstrap the Proxy Host
-
-.Task: Bootstrap the Proxy Host
-. Select menu:Systems[Bootstrapping].
-. Fill in the fields for your proxy host.
-. Select the Activation key created in the previous step from the dropdown.
-. Click btn:[Bootstrap].
-. Wait for the Bootstrap process to complete successfully.
-  Check the menu:Salt[] menu and confirm the {salt} key is listed and accepted.
-. Reboot the proxy host.
-. Select the host from the menu:System[] list and trigger a second reboot after all events are finished to conclude the onboarding.
-
-
-.Task: Update the Proxy Host
-. Select the host from the menu:Systems[] list and apply all patches to update it.
-. Reboot the proxy host.
+include::../actkey-bootstrap-proxy-suma.adoc[]
 
 
 include::../generate_proxy_config.adoc[]
