Image removed from retail guide.

--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -119,13 +119,11 @@ Before configuring {saltboot} group, make sure you already have at least one POS
 
 Containerized {productname} {smr} is configured using so called [systemitem]``Saltboot Group``.
 
-{saltboot} Group is a branch groups, system group with branch id as its name created in previous step, with [systemitem]``Saltboot Group`` formula enabled.
-
-image::saltboot_group.png[scaledwidth=80%]
+{saltboot} groups are branch groups, system group with branch id as its name created in previous step, with [systemitem]``Saltboot Group`` formula enabled.
 
 [systemitem]``Saltboot Group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` previously used in {productname} {smr} setups.
 
-To connect [systemitem]``Saltboot group`` with containerized proxy fill [systemitem]``Image Download Server`` entry with Fully Qualified Domain Name ([literal]``FQDN``) of the containerized proxy.
+To connect [systemitem]``Saltboot Group`` with containerized proxy fill [systemitem]``Image Download Server`` entry with Fully Qualified Domain Name ([literal]``FQDN``) of the containerized proxy.
 
 
 == Configure Network Services for {saltboot}
@@ -143,7 +141,8 @@ For configuration examples, see xref:retail:example-configurations.adoc[].
 For this to work [systemitem]``DHCP`` service for the network terminal is connected to must have [systemitem]``PXE`` or sometimes called [systemitem]``BOOTP`` support enabled.
 
 .Example of ISC DHCP server configuration with PXE booting enabled
-====
+
+----
   if substring (option vendor-class-identifier, 0, 10) = "HTTPClient" {
     option vendor-class-identifier "HTTPClient";
     filename "<FQDN of branch server proxy>/saltboot/shim.efi";
@@ -158,7 +157,7 @@ For this to work [systemitem]``DHCP`` service for the network terminal is connec
       next-server <IP address of branch server proxy>;
     }
   }
-====
+----
 
 Notice two important options, [systemitem]``next-server`` which is set to the branch server IP address and [systemitem]``filename`` set to the [systemitem]``pxelinux.0`` for BIOS based system and [systemitem]``grub/shim.efi`` for UEFI systems with SecureBoot support.
 
