--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -26,8 +26,7 @@ ifeval::[{uyuni-content} == true]
 *** Server
 **** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Server Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc[Air-gapped Deployment]
-*** Proxy
-**** xref:install-proxy.adoc[Proxy Installation]
+*** xref:install-proxy.adoc[Proxy]
 **** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Containerized {productname} Proxy Setup]
 **** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Proxy Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Proxy Deployment on K3s]
@@ -41,9 +40,7 @@ ifeval::[{suma-content} == true]
 **** xref:container-deployment/suma/server-deployment-vmdk-suma.adoc[Server Deployment as Virtual Machine - VMware]
 **** xref:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
-
-*** Proxy
-**** xref:install-proxy.adoc[Proxy Installation]
+*** xref:install-proxy.adoc[Proxy]
 **** xref:container-deployment/suma/proxy-deployment-suma.adoc[{productname} Proxy Deployment on {sle-micro}]
 **** xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/suma/proxy-deployment-vmdk-suma.adoc[Proxy Deployment Virtual Machine - VMware]
