--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-migration-suma.adoc
@@ -13,12 +13,12 @@ This section describes migrating from Proxy 4.3 using the [command]``mgrpxy`` to
 
 [IMPORTANT]
 ====
-An in-place migration from {productname} 4.3 to 5.0 is unsupported due to the HostOS change from {sles} 15 SP4 to {sle-micro} {microversion}.
+An in-place migration from {productname} 4.3 to 5.0 is unsupported because the host operating system changed from {sles} 15 SP4 to {sle-micro} {microversion}.
 
 The traditional contact protocol is no longer supported in {productname} 5.0 and later.
 Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
 
-For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html
+For more information about migrating to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html
 ====
 
 
@@ -27,7 +27,7 @@ For more information about migrating traditional {productname} 4.3 clients to {s
 
 Because in-place migration is not supported, the users must deploy a new {productname} proxy with a new FQDN.
 
-* For more information about installing {productname} Proxy, see xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Deploy Proxy as a Virtual Machine].
+For more information about installing {productname} Proxy, see xref:installation-and-upgrade:install-proxy.adoc[].
 
 == Migrate Clients to the New Proxy
 
@@ -40,16 +40,15 @@ Before migrating the clients, ensure that the new proxy is already deployed and 
 . Log in to the {productname} Server {webui}.
 . From the left navigation, select menu:Systems[Systems List].
 . Navigate to the old 4.3 proxy page, and click the [guimenu]``Proxy`` tab.
-. Select all system to "SSM".
+. Select all systems to "SSM".
 . From the left navigation, select menu:Systems[System Set Manager].
 . Select the sub-menu menu:Misc[Proxy].
-. From the drop down select the new proxy to migrate to.
-. Click on btn:[Change Proxy].
-. After this action, minions will be migrated to the new proxy.
-. You can check the schedule progress to verify if all systems were successfully migrated.
+. From the drop-down select the new proxy to migrate to.
+. Click btn:[Change Proxy].
+
+Now all selected clients will be migrated to the new proxy.
+You can check the schedule progress to verify if all clients were successfully migrated.
 
 
-After a few minutes, the machines will start to show up the new connection path.
-When all machines have the connection path under the new proxy, the old 4.3 proxy machine is not needed anymore and can be removed.
-
-
+After a few minutes, the clients will start to show up the new connection path.
+When all clients have the connection path under the new proxy, the old 4.3 proxy system is not needed anymore and can be removed.
