--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -53,13 +53,11 @@ We assign [systemitem]``Saltboot Group`` formula to group [systemitem]``B0001`` 
 
 Containerized {productname} {smr} is configured in [systemitem]``Saltboot Group``.
 
-{saltboot} Groups are branch groups, system group with branch id as its name, with [systemitem]``Saltboot Group`` formula enabled.
-
-image::saltboot_group.png[scaledwidth=80%]
+{saltboot} groups are branch groups, system group with [systemitem]``branch id`` as its name, with [systemitem]``Saltboot Group`` formula enabled.
 
 [systemitem]``Saltboot Group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` used in regular {productname} {smr} setups.
 
-Name of the [systemitem]``Saltboot group`` is automatically used as a [systemitem]``branch id``, an identifier for group of machines booted through particular containerized {productname} Proxy.
+Name of the [systemitem]``Saltboot Group`` is automatically used as a [systemitem]``branch id``, an identifier for group of machines booted through particular containerized {productname} Proxy.
 
 All [systemitem]``Saltboot`` deployed machines though containerized proxy will automatically became members of its [systemitem]``Saltboot group``.
 
