--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -119,7 +119,7 @@ Before configuring {saltboot} group, make sure you already have at least one POS
 
 Containerized {productname} {smr} is configured using so called [systemitem]``Saltboot Group``.
 
-{saltboot} groups are branch groups, system group with branch id as its name created in previous step, with [systemitem]``Saltboot Group`` formula enabled.
+{saltboot} groups are branch groups, system group with [systemitem]``branch id`` as its name created in previous step, with [systemitem]``Saltboot Group`` formula enabled.
 
 [systemitem]``Saltboot Group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` previously used in {productname} {smr} setups.
 
