--- a/modules/reference/pages/admin/setup-wizard.adoc
+++ b/modules/reference/pages/admin/setup-wizard.adoc
@@ -21,7 +21,7 @@ Navigate to the [guimenu]``HTTP Proxy`` tab to configure the proxy.
 
 You will need to provide the hostname of the proxy.
 Use the syntax ``<hostname>:<port>``.
-For example: ``<example.com>:8080``.
+For example: ``example.com:8080``.
 
 You can disable use of the proxy by clearing the fields.
 
