Fixed reference link.

--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -5,7 +5,7 @@ Terminals can be named according to certain parameters, which can make it easier
 
 Naming schemes available are ``Hostname``, ``FQDN``, ``HWType``, and ``MAC``.
 Naming scheme and its configuration can be selected in the [guimenu]``Saltboot Group`` formula for containerized branch servers or in the [guimenu]``Branch Network`` formula for others.
-For more information, see xref:retail/containerized-saltboot.adoc[] and xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
+For more information, see xref:retail:containerized-saltboot.adoc[] and xref:specialized-guides:salt/salt-formula-branchnetwork.adoc[].
 
 By default, terminals are named according to the ``Hostname`` naming scheme with the ``HWType`` scheme as a fallback.
 
