Use of parameter.

--- a/modules/retail/pages/retail-terminal-names.adoc
+++ b/modules/retail/pages/retail-terminal-names.adoc
@@ -27,7 +27,7 @@ B002.TOSHIBA-6140100-41BA03X-c643
 
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID``.
+You can disable this prefix by toggling the [systemitem]``Do not prefix {salt} client ID with Branch ID``.
 
 The [systemitem]``Manufacturer``, [systemitem]``ProductName``, and [systemitem]``SerialNumber`` are provided by the terminal hardware BIOS.
 If the terminal does not provide a serial number, it will be omitted from the terminal name.
@@ -35,7 +35,7 @@ If the terminal does not provide a serial number, it will be omitted from the te
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
 Added unique ID is a requirement for successful terminal deployment.
 Without unique ID, subsequent terminal registration will fail.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID``.
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the {salt} client ID``.
 
 
 
@@ -55,12 +55,12 @@ B002.terminal-c643
 
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox.
+You can disable this prefix by toggling the [systemitem]``Do not prefix {salt} client ID with Branch ID`` checkbox.
 
 The [systemitem]``Hostname`` is the plain hostname (without domain part) of the terminal.
 
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox.
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the {salt} client ID`` checkbox.
 
 
 
@@ -80,12 +80,12 @@ B002.terminal.example.com-c643
 
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox.
+You can disable this prefix by toggling the [systemitem]``Do not prefix {salt} client ID with Branch ID`` checkbox.
 
 The [systemitem]``FQDN`` is the fully qualified domain name of the terminal.
 
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox.
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the {salt} client ID`` checkbox.
 
 
 
@@ -104,12 +104,12 @@ B0002.52:54:00:62:18:6f-cb83
 ----
 
 The [systemitem]``BranchID`` is the unique identifier for the branch server that the terminal is connected to.
-You can disable this prefix by toggling the [systemitem]``Do not prefix salt client ID with Branch ID`` checkbox.
+You can disable this prefix by toggling the [systemitem]``Do not prefix {salt} client ID with Branch ID`` checkbox.
 
 The [systemitem]``MAC`` is colon delimited hardware address of the network interface card used for booting of the terminal.
 
 The [systemitem]``UniqueID`` is the first four characters of a generated machine identification number.
-You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the salt client ID`` checkbox.
+You can disable this behavior by toggling the [systemitem]``Do not append unique suffix to the {salt} client ID`` checkbox.
 
 
 == Assign Hostnames to Terminals
