--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -6,6 +6,10 @@ endif::[]
 
 The following tables specify the minimum server and proxy requirements.
 
+[IMPORTANT]
+====
+Do not use NFS for storage as it doesn't support SELinux file labeling.
+====
 
 // In this table, replace ``version`` with the version of the product you are using.
 == Server Requirements
