--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -755,7 +755,7 @@ The section contains some known issues when working with images.
 To list available built images select menu:Images[Image List].
 A list of all images is displayed.
 
-image::images_list_images.png[scaledwidth=80%]
+//image::images_list_images.png[scaledwidth=80%]
 
 Displayed data about images includes an image [guimenu]``Name``, its [guimenu]``Version``, [guimenu]``Revision``, and the build [guimenu]``Status``.
 You can also see the image update status with a listing of possible patch and package updates that are available for the image.
