--- a/modules/administration/pages/confidential-computing.adoc
+++ b/modules/administration/pages/confidential-computing.adoc
@@ -85,8 +85,6 @@ mgradm scale --coco-replicas 0
 . In the field [literal]``Environment Type`` select the correct option from the drop-down list.
 //. (PLACEHOLDER) Enable the automatic attestaion at reboot by selecting the toggle button [literal]``Execution``.
 . Click button btn:[Save] to save the changes.
-+
-image::attestation1-v2.png[]
 
 .Procedure: Scheduling New Attestation
 [role=procedure]
@@ -96,36 +94,20 @@ image::attestation1-v2.png[]
 . In the field [literal]``Earliest`` select the time of running the attestation.
 . If needed, add the newly created attestation to the action chain by selecting [literal]``Add to`` option.
 . Click button btn:[Schedule] to save and schedule the new attestation execution.
-+
-image::attestation2-v2.png[]
-+
 
 .Procedure: Viewing Attestation Reports from System Details
 [role=procedure]
 . For the selected system, go to tab menu:Audit[Confidential Computing > List Attestations].
 . Find and select the report you want to view.
-+
-image::attestation3-v2.png[]
-+
 . After clicking the selected attestation report tab [literal]``Overview`` will open.
-+
-image::attestation4-v2.png[]
-+
 . Move to the next tab [literal]``SEV-SNP``.
-+
-image::attestation5-v2.png[]
-+
 . Finally, move to the next tab [literal]``Secure Boot``.
-+
-image::attestation6-v2.png[]
 
 
 .Procedure: Viewing Attestation Reports from Audit
 [role=procedure]
 . From the navigation bar, select menu:Audit[Confidential Computing].
 . The list of all attestations will be shown in the main panel.
-+
-image::attestation7-v2.png[]
 +
 . Find and select the report you want to view.
 
@@ -149,5 +131,4 @@ When the scheduled fails and does not create a report as a result, the status of
 
 == Related Topics
 
-// * For more information about {CoCo}, see [link]``https://www.fortanix.com/platform/confidential-computing-manager/what-is-confidential-computing`` (external link).
-* For more information about {CoCo}, see [link]``https://confidentialcomputing.io`` (external link).
+For more information about {CoCo}, see https://www.fortanix.com/platform/confidential-computing-manager/what-is-confidential-computing[here].
