Images and icons tidying up.

--- a/modules/reference/pages/patches/patch-list-all.adoc
+++ b/modules/reference/pages/patches/patch-list-all.adoc
@@ -9,12 +9,12 @@ Click the advisory number to see more information about the patch.
 
 
 [[patch-status-icons]]
-[cols="1a,1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Patch Status Icons
 |===
 | Icon | Description | Action Required
 | icon:bug[role="none"] | Bug fix | Recommended
-| image::spacewalk-icon-enhancement.svg[] | Product enhancement advisory | Optional
+| image:spacewalk-icon-enhancement.svg[] | Product enhancement advisory | Optional
 | icon:shield-alt[role="yellow"] | Security update | Essential
 | icon:archive[role="none"]| Affects package management stack | Recommended
 |===
