--- a/modules/reference/pages/patches/patch-list-relevant.adoc
+++ b/modules/reference/pages/patches/patch-list-relevant.adoc
@@ -14,7 +14,7 @@ For more information about the menu:Patches[Patch List > Patch Details] section,
 |===
 | Icon | Description | Action Required
 | icon:bug[role="none"] | Bug fix | Recommended
-| image:spacewalk-icon-enhancement.svg | Product enhancement advisory | Optional
+| image:spacewalk-icon-enhancement.svg[] | Product enhancement advisory | Optional
 | icon:shield-alt[role="yellow"] | Security update | Essential
 | icon:archive[role="none"]| Affects package management stack | Recommended
 |===
