--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -255,7 +255,7 @@ See the tables in this section for guides to estimate the size required.
 
 [IMPORTANT]
 ====
-Do not use NFS for storage as it doesn't support SELinux file labeling.
+Do not use NFS for storage because it does not support SELinux file labeling.
 ====
 
 On the {productname} Server, use this command to find all available storage devices:
