--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -8,7 +8,7 @@ The following tables specify the minimum server and proxy requirements.
 
 [IMPORTANT]
 ====
-Do not use NFS for storage as it doesn't support SELinux file labeling.
+Do not use NFS for storage because it does not support SELinux file labeling.
 ====
 
 // In this table, replace ``version`` with the version of the product you are using.
