Add hint not to use NFS (#3608)
* add note about missing NFS support
Signed-off-by: Christian Stankowic <christian.stankowic@sva.de>
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -253,6 +253,11 @@ We recommend you use XFS as the filesystem type for all volumes.
 The size of the disk for repositories storage is dependent on the number of distributions and channels you intend to manage with {productname}.
 See the tables in this section for guides to estimate the size required.
 
+[IMPORTANT]
+====
+Do not use NFS for storage because it does not support SELinux file labeling.
+====
+
 On the {productname} Server, use this command to find all available storage devices:
 
 ----
