--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -350,7 +350,7 @@ This section contains information about the available parameters.
                          Channel-altering operations include the addition of a patch, the removal of a package or a repository synchronization run.
                          This parameter specifies the maximum number of Taskomatic threads that {productname} will use to recompute the channel metadata.
                          Channel metadata computation is both CPU-bound and memory-heavy, so raising this parameter and operating on many channels simultaneously could cause Taskomatic to consume significant resources, but channels will be available to clients sooner.
-| Tune when            | xref:channel-count[Channel count] increases significantly (more than 50), or more concurrent operations on channels are expected.
+| Tune when            | xref:channel-count[Channel count] becoms larger than 50, or more concurrent operations on channels are expected.
 | Value default        | 2
 | Value recommendation | 2-10
 | Location             | [path]``/etc/rhn/rhn.conf``
@@ -424,7 +424,7 @@ This section contains information about the available parameters.
 | Value default        | 1
 | Value recommendation | 1-10
 | Location             | [path]``/etc/rhn/rhn.conf``
-| Example              | `taskomatic.com.redhat.rhn.taskomatic.task.MinionActionExecutor.parallel_threads = 10`
+| Example              | `taskomatic.minion_action_executor.parallel_threads = 10`
 |===
 
 [[SSHMinionActionExecutor-parallel-threads]]
@@ -437,7 +437,7 @@ This section contains information about the available parameters.
 | Value default        | 20
 | Value recommendation | 20-100
 | Location             | [path]``/etc/rhn/rhn.conf``
-| Example              | `taskomatic.com.redhat.rhn.taskomatic.task.SSHMinionActionExecutor.parallel_threads = 40`
+| Example              | `taskomatic.sshminion_action_executor.parallel_threads = 40`
 |===
 
 
