Removed images (Admin Guide) (#3609)
* Images cleanup.

* Cont.

* Cont.

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -109,14 +109,10 @@ For more information, see xref:client-configuration:activation-keys.adoc[].
 All built images are pushed to an image store.
 This section contains information about creating an image store.
 
-image::images_image_stores.png[scaledwidth=80%]
-
 .Procedure: Creating Image Store
 . Select menu:Images[Stores].
 . Click [guimenu]``Create`` to create a new store.
-+
-image::images_image_stores_create.png[scaledwidth=80%]
-+
+. From the [guimenu]``Store Type`` select the correct type.
 . Define a name for the image store in the [guimenu]``Label`` field.
 . Provide the path to your image registry by filling in the [guimenu]``URI`` field, as a fully qualified domain name (FQDN) for the container registry host (whether internal or external).
 +
@@ -139,13 +135,8 @@ registry.example.com:5000/myregistry/myproject
 All container images are built using an image profile, which contains the building instructions.
 This section contains information about creating an image profile with the {productname} {webui}.
 
-image::images_image_profiles.png[scaledwidth=80%]
-
 .Procedure: Creating an Image Profile
 . To create an image profile select menu:Images[Profiles] and click btn:[Create].
-+
-image::images_image_create_profile.png[scaledwidth=80%]
-
 . Provide a name for the image profile by filling in the [guimenu]``Label`` field.
 +
 [NOTE]
@@ -281,11 +272,10 @@ For more information about the available custom info keys and creating additiona
 
 
 There are two ways to build an image.
-You can select menu:Images[Build] from the left navigation bar, or click the build icon in the menu:Images[Profiles] list.
+The first way is to create it from scratch. 
+To do that, select menu:Images[Build] from the left navigation bar, or click the build icon in the menu:Images[Profiles] list and follow the procedure.
 
-image::images_image_build.png[scaledwidth=80%]
-
-.Procedure: Building an Image
+.Procedure: Building an image
 . Select menu:Images[Build].
 . Add a different tag name if you want a version other than the default ``latest`` (only relevant to containers).
 . Select [guimenu]``Build Profile`` and [guimenu]``Build Host``.
@@ -303,8 +293,8 @@ When you have selected a build profile, detailed information about the selected 
 [[at.images.docker.importing]]
 === Import an Image
 
-You can import and inspect arbitrary images.
-Select menu:Images[Image List] from the left navigation bar.
+The second way to build an image is to import and inspect arbitrary images.
+To do that, select menu:Images[Image List] from the left navigation bar.
 Complete the text boxes of the [guimenu]``Import`` dialog.
 When it has processed, the imported image is listed on the [guimenu]``Image List`` page.
 
@@ -405,10 +395,8 @@ For example, you must build Raspberry PI {sles}{nbsp}15 SP3 image on a Raspberr
 
 .Procedure: Configure the Build Host in the {productname} {webui}
 . Select a client to be designated as a build host from the menu:Systems[Overview] page.
-. Navigate to the menu:System Details[Properties] tab, enable the [guimenu]``Add-on System Type`` [guimenu]``OS Image Build Host``. Confirm with btn:[Update Properties].
-+
-image::os-image-build-host.png[scaledwidth=80%]
-+
+. Navigate to the menu:System Details[Properties] tab, and check the [guimenu]``Add-on System Type`` > [guimenu]``OS Image Build Host`` box. 
+. Confirm with btn:[Update Properties].
 . Navigate to menu:System Details[Software > Software Channels], and enable the required software channels depending on the build host version.
 +
 * {sles}{nbsp}12 build hosts require {productname} Client tools (``SLE-Manager-Tools12-Pool`` and ``SLE-Manager-Tools12-Updates``).
@@ -520,14 +508,8 @@ endif::[]
 
 Manage image profiles using the {webui}.
 
-image::images_image_profiles.png[scaledwidth=80%]
-
 .Procedure: Creating an Image Profile
 . To create an image profile select from menu:Images[Profiles] and click btn:[Create].
-+
-
-image::images_image_create_profile_kiwi.png[scaledwidth=80%]
-
 . In the [guimenu]``Label`` field, provide a name for the `Image Profile`.
 . Use `Kiwi` as the [guimenu]``Image Type``.
 . Image store is automatically selected.
@@ -675,8 +657,6 @@ For information about the Kiwi build system, see the https://osinside.github.io/
 There are two ways to build an image using the {webui}.
 Either select menu:Images[Build], or click the build icon in the menu:Images[Profiles] list.
 
-image::images_image_build.png[scaledwidth=80%]
-
 .Procedure: Building an Image
 . Select menu:Images[Build].
 . Add a different tag name if you want a version other than the default ``latest`` (applies only to containers).
@@ -752,8 +732,6 @@ The section contains some known issues when working with images.
 
 To list available built images select menu:Images[Image List].
 A list of all images is displayed.
-
-image::images_list_images.png[scaledwidth=80%]
 
 Displayed data about images includes an image [guimenu]``Name``, its [guimenu]``Version``, [guimenu]``Revision``, and the build [guimenu]``Status``.
 You can also see the image update status with a listing of possible patch and package updates that are available for the image.
