--- a/modules/reference/pages/configuration/config-channels.adoc
+++ b/modules/reference/pages/configuration/config-channels.adoc
@@ -77,10 +77,12 @@ To import files from other configuration channels, including any locally managed
 Then click btn:[Import Configuration Files].
 +
 
-NOTE: A sandbox icon (image:spacewalk-icon-sandbox.svg[]) indicates that the listed file is currently located in a local sandbox.
+[NOTE]
+==== 
+A sandbox icon (image:spacewalk-icon-sandbox.svg[]) indicates that the listed file is currently located in a local sandbox.
 Files in a system's sandbox are considered experimental and could be unstable.
 Use caution when selecting them for a central configuration channel.
-+
+====
 
 
 Create File:::
