--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -120,4 +120,5 @@ systemctl restart salt-minion
 salt-key -a '<client>'
 ----
 
-For more information about the Salt minion configuration file, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html[Salt Project Documentation: Minion Configuration].
+For more information about the {salt} minion configuration file, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html[Configuring the Salt Minion].
+
