add general info to overview page

--- a/modules/client-configuration/pages/registration-overview-suse.adoc
+++ b/modules/client-configuration/pages/registration-overview-suse.adoc
@@ -3,15 +3,27 @@
 
 ifeval::[{suma-content} == true]
 // SUSE Liberty Linux not available at Uyuni for now
-You can register {sle} and {sleses} clients to your {productname} Server.
+You can register {sle} and {sleses} clients to {productname} Server.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
 // SUSE Liberty Linux not available at Uyuni for now
-You can register {sle} clients to your {productname} Server.
+You can register {sle} clients to {productname} Server.
 endif::[]
 
-The method and details varies depending on the operating system of the client.
+
+To register a new client to {productname} Server, first synchronize software channels for the new client's operating system and architecture by using either the {webui} or command line tools.
+
+ifeval::[{uyuni-content} == true]
+Then, synchronize the client tool repository for the newly added operating system by using command line tools.
+endif::[]
+
+The method and details varies depending on the client's operating system.
+This is described in the following sections.
+
+
+
+== Preliminary Steps or Checks
 
 Before you start, ensure that the client has the date and time synchronized correctly with the {productname} Server.
 
