--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -128,4 +128,4 @@ salt-key -a '<client>'
 ----
 --
 
-For more information about the Salt minion configuration file, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html.
+For more information about the {salt} minion configuration file, see https://docs.saltproject.io/en/latest/ref/configuration/minion.html[Configuring the Salt Minion].
