add cmmand to list all available repos

--- a/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
@@ -8,6 +8,12 @@ mgrctl exec -ti -- spacewalk-common-channels \
 <child_channel_label_2> \
 ... <child_channel_label_n>
 ----
++
+To list all available repositories, execute the command:
++
+----
+spacewalk-common-channels -l
+----
 . If xref:administration:custom-channels.adoc#_custom_channel_synchronization[automatic synchronization] is turned off, synchronize the channels:
 +
 ----
