--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -1,15 +1,11 @@
 [[clients-slmicro]]
 = Registering {sl-micro} Clients
 
-This section contains information about registering clients running {nbsp}{sl-micro} operating system 6.0 {x86_64}, {arm64}, and {zsystems} (s390x).
-
-The {sl-micro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
-It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
+This section contains information about registering clients running {sl-micro} operating system 6.0 {x86_64}, {arm64}, and {zsystems} (s390x).
 
 The {sl-micro} uses transactional updates.
 Transactional updates are atomic (all updates are applied only if all updates succeed) and support rollbacks.
 They do not affect a running system as no changes are activated until after the system is rebooted.
-This information is displayed in the menu:Systems[Details > Overview] subtab.
 
 For more information on transactional updates and rebooting, see
 https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html.
@@ -18,11 +14,13 @@ https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html
 
 == Add Software Channels
 
-Before you register {sl-micro} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
+Before you register {sl-micro} clients to the {productname} Server, you need to add the required software channels, and synchronize them.
+
+You can add the software channels with the {webui} or from the command line.
 
 include::snippets/arch-other-note.adoc[]
 
-The products you need for this procedure are:
+For the {webui} procedure, you need the following products:
 
 
 [[slmicro-channels-wizard-61]]
@@ -69,8 +67,9 @@ The products you need for this procedure are:
 include::snippets/addchannels_vendor_webui.adoc[]
 
 
-Alternatively, you can add channels at the command prompt.
-The channels you need for this procedure are:
+
+Alternatively, you can add channels from the command prompt.
+For this procedure, you need the following products:
 
 // 6.1 from command line
 [[slmicro-channels-cli-61]]
@@ -104,6 +103,33 @@ The channels you need for this procedure are:
 include::snippets/addchannels_vendor_cli.adoc[]
 
 
+ifeval::[{uyuni-content} == true]
+
+== Client Tools
+
+Without client tools onboarding clients will fail.
+Client tools you can only add from the command line.
+
+To add the client tools, add these channels from the command prompt:
+
+// FIXME: check labels/names
+[[sl-micro-tools-channels-cli]]
+[cols="1,1", options="header"]
+.SL Micro Channels - CLI
+|===
+
+| OS Version
+| Client Channel
+| {sl-micro} 6.1
+| sl-microos-6.1-uyuni-client
+
+|===
+
+
+include::snippets/addchannels_novendor_cli.adoc[]
+
+
+endif::[]
 
 == Check Synchronization Status
 
