--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -102,7 +102,6 @@ For this procedure, you need the following products:
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
-
 ifeval::[{uyuni-content} == true]
 
 == Client Tools
@@ -130,6 +129,8 @@ include::snippets/addchannels_novendor_cli.adoc[]
 
 
 endif::[]
+
+
 
 == Check Synchronization Status
 
@@ -171,7 +172,7 @@ ORG_CA_CERT_IS_RPM_YN=0
 Either edit the bootstrap script directly and add the settings, or create the bootstrap script with these parameters:
 
 ----
-mgr-bootstrap --script=bootstrap-sl-micro.sh \
+mgrctl exec -ti -- mgr-bootstrap --script=bootstrap-sl-micro.sh \
     --ssl-cert=/srv/www/htdocs/pub/RHN-ORG-TRUSTED-SSL-CERT
 ----
 
