--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -10,12 +10,21 @@ They do not affect a running system as no changes are activated until after the 
 For more information on transactional updates and rebooting, see
 https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html.
 
-// FIXME: add this:
-////
-To register a new client to Uyuni, first synchronize software channels for the new client's operating system and architecture by using either Web UI or CLI.
-# Then, for Uyuni only
-Then, synchronize the client tool repository for the newly added operating system by using CLI.
-////
+// FIXME: We either must add this to the other client files (snippet), or
+//        up to the suse registration page
+The client registration described in this chapter, consists of these steps:
+
+* Synchronize software channels for the new client's operating system and architecture by using either {webui} or command line interface.
+
+ifeval::[{uyuni-content} == true]
+
+* Synchronize the client tool repository for the newly added operating systems by using command line interface.
+
+endif::[]
+
+* Run the actual registration.
+
+* Additional sections to check and verify the registration procedure.
 
 
 == Add Software Channels
