--- a/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
@@ -12,7 +12,7 @@ mgrctl exec -ti -- spacewalk-common-channels \
 To list all available repositories, execute the command:
 +
 ----
-spacewalk-common-channels -l
+mgrctl exec -ti -- spacewalk-common-channels -l
 ----
 . If xref:administration:custom-channels.adoc#_custom_channel_synchronization[automatic synchronization] is turned off, synchronize the channels:
 +
