--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -214,56 +214,11 @@ For more information, see
 * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
 
-== Create an Activation Key for the Proxy
-
-.Procedure: Creating an Activation Key
-. Select menu:Systems[Activation Keys] then click btn:[Create key].
-. Create an activation key for the proxy host with {sle-micro} {microversion} as the parent channel.
-  This key should include all recommended channels and the proxy as an extension child channel.
-. Proceed to boostrapping the proxy host as a [systemitem]``default`` client.
-
-
-
-== Bootstrap the Proxy Host as a Client
-
-.Procedure: Bootstrapping the Proxy Host
-. Select menu:Systems[Bootstrapping].
-. Fill in the fields for your proxy host.
-. Select the activation key created in the previous step from the drop-down.
-. Click btn:[Bootstrap].
-. Wait for the bootstrap process to complete successfully.
-  Check the menu:Salt[] menu and confirm the {salt} key is listed and accepted.
-. Reboot the proxy host.
-. Select the host from the menu:System[] list and trigger a second reboot after all events are finished to conclude the onboarding.
-
-
-.Procedure: Updating the Proxy Host
-. Select the host from the menu:Systems[] list and apply all patches to update it.
-. Reboot the proxy host.
-
+include::../actkey-bootstrap-proxy-suma.adoc[]
 
 include::../generate_proxy_config.adoc[]
 
-
-[[proxy-setup-containers-transfer-config]]
-== Transfer the Proxy Configuration
-
-The {webui} generates a configuration archive.
-This archive needs to be made available on the proxy container host.
-
-
-.Procedure: Copying the Proxy Configuration
-
-. Copy the configuration archive ([literal]``config.tar.gz``) generated in the previous step to the Proxy host:
-+
-----
-scp config.tar.gz <proxy-FQDN>:/root
-----
-. Install the Proxy with:
-+
-----
-mgrpxy install podman config.tar.gz
-----
+include::../transfer_proxy_config.adoc[]
 
 
 
