--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -34,7 +34,8 @@ You can use the [systemitem]``set-cname`` parameter multiple times if you requir
 The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
 
-Deploy the new certificate and key using the `mgr-ssl-cert-setup` tool as documented in xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
+Deploy the new certificate and key using the `mgr-ssl-cert-setup` tool.
+For more information see as xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
 
 
 [[ssl-certs-selfsigned-create-replace]]
