--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -24,13 +24,16 @@ If your existing certificates have expired or stopped working for any reason, yo
 mgrctl exec -ti -- rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
---set-hostname="susemanager.example.com" --set-cname="example.com"
+--set-hostname="susemanager.example.com" --set-cname="example.com" --no-rpm
 ----
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
 You can use the the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 
 The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
+
+Deploy the new certificate and key using the [mommand]``mgr-ssl-cert-setup`` tool.
+For more information see as xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
  
 
 [[ssl-certs-selfsigned-create-replace]]
