Document not to generate RPM when creating new SSL certificates.

--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -31,6 +31,9 @@ You can use the the [systemitem]``set-cname`` parameter multiple times if you re
 
 The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
+
+Deploy the new certificate and key using the [mommand]``mgr-ssl-cert-setup`` tool.
+For more information see as xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
  
 
 [[ssl-certs-selfsigned-create-replace]]
