Maybe, config archive is already moved or copied...

--- a/modules/installation-and-upgrade/pages/container-deployment/transfer_proxy_config.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/transfer_proxy_config.adoc
@@ -6,19 +6,19 @@ This archive needs to be made available on the proxy container host.
 
 .Procedure: Copying the Proxy Configuration
 
-. Copy the configuration archive ([literal]``config.tar.gz``) generated in the previous step from the server container to the server host:
+. If notalready done, copy the configuration archive ([literal]``config.tar.gz``) generated in the previous step from the server container to the server host:
 +
 ----
 mgrctl cp server:/root/config.tar.gz .
 ----
 
-. Copy the files from the server host OS to the proxy host:
+. If not already done, copy the files from the server host to the proxy host:
 +
 ----
 scp config.tar.gz <proxy-FQDN>:/root
 ----
 
-. Install the Proxy with:
+. On the proxy host, install the Proxy with:
 +
 
 ----
